# ms-preprocessing-toolkit

./: .gitignore  .gitmodules  .graphifyignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  ms-preprocessing.spec  pyproject.toml  requirements.txt
.codex/: config.toml
.github/workflows/: build.yml  ci.yml
config/: local_reference.example.yml  local_reference_paths.example.json
config/presets/: pipeline_profile.example.yml
docs/: 2026-04-22-fh-mzmine-session-note.md  TESTING.md  codex-skill-recommendations.md  step4-gate-refactor-report.md
docs/contracts/: dnp-step4-metadata-pass-through.md  ma-step4-imputation-metadata-consumer.md
docs/plans/: 2026-03-04-step4-zero-impute-and-performance-design.md  2026-03-04-step4-zero-missing-performance-implementation.md  2026-03-05-conservative-io-write-optimization-implementation.md  2026-03-05-conservative-io-write-optimization-notes.md  2026-03-05-unified-parquet-v2-implementation.md  2026-03-05-unified-parquet-v2-rollout-checklist.md  2026-03-09-submodule-and-github-actions.md  2026-03-11-step4-threshold-toggle-implementation.md  2026-03-12-root-hygiene-cleanup.md  2026-03-22-cross-project-followups.md  2026-04-20-combined-tsv-preprocessor-ux.md  2026-04-27-gui-completion-transition.md  2026-04-27-gui-ux-hardening.md  2026-04-28-pipeline-boundary-gui-controller.md  2026-04-28-pipeline-boundary-refactor.md  2026-04-28-pipeline-boundary-step3-core.md  2026-04-28-pipeline-boundary-step4-core.md  2026-04-28-pipeline-boundary-work-allocation.md  2026-04-28-pipeline-boundary-workflow-runner.md  2026-04-28-step2-xic-input-provider.md  2026-04-29-gui-pipeline-controller-slimming.md  2026-04-29-step1-data-organizer-facade-slimming.md  2026-04-30-step4-imputation-tag-discussion.md  2026-04-30-step4-tag-contract.md  2026-04-30-step4-tag-implementation.md  2026-04-30-yaml-pipeline-profiles.md  2026-05-02-stabilization-lane.md
docs/release/: README.md
docs/superpowers/plans/: 2026-03-14-architecture-refactor.md  2026-03-20-step4-gate-logic-refactor.md  2026-04-11-ms-core-maintenance-architecture.md  2026-04-17-small-n-wilson-ci.md
docs/superpowers/specs/: 2026-03-14-architecture-refactor-design.md  2026-04-11-ms-core-maintenance-architecture-design.md  2026-04-28-step1-internal-boundaries.md
scripts/: benchmark_pipeline_io.py  benchmark_step4_io.py  clean_local_artifacts.ps1
skills/commit-outline/: SKILL.md
skills/commit-outline/agents/: openai.yaml
skills/commit-outline/references/: templates.md
skills/merge-quality-gate/: SKILL.md
skills/merge-quality-gate/agents/: openai.yaml
skills/merge-quality-gate/references/: pre-merge-checklist.md
skills/ms-quality-gate/: SKILL.md
skills/ms-quality-gate/agents/: openai.yaml
skills/ms-quality-gate/references/: review-checklist.md
skills/ms-quality-gate/scripts/: review_snapshot.ps1  run_quality_checks.ps1
skills/release-checklist/: SKILL.md
skills/release-checklist/agents/: openai.yaml
skills/release-checklist/references/: commands.md
skills/root-hygiene/: SKILL.md
skills/submodule-update/: SKILL.md
skills/submodule-update/agents/: openai.yaml
skills/submodule-update/references/: ms-core-sequence.md
skills/verification-shards/: SKILL.md
skills/verification-shards/agents/: openai.yaml
skills/verification-shards/scripts/: run_verification_shard.ps1
src/ms_preprocessing/: __init__.py  bootstrap_paths.py  main.py  pipeline_validation.py
src/ms_preprocessing/adapters/: __init__.py  data_organizer.py  duplicate_remover.py  feature_filter.py  istd_marker.py
src/ms_preprocessing/config/: __init__.py  feature_filter_presets.py  path_resolver.py  pipeline_defaults.py  pipeline_profiles.py  profile_loader.py  settings.py
src/ms_preprocessing/core/: __init__.py  base.py  data_organizer.py  duplicate_remover.py  feature_filter.py  istd_marker.py
src/ms_preprocessing/gui/: __init__.py  async_task_runner.py  combined_tsv_controller.py  event_handlers.py  final_export_controller.py  layout.py  main_window.py  path_display.py  pipeline_controller.py  pipeline_session.py  run_all_controller.py  step_output_autosave_service.py  step_summary.py  styles.py  validation.py
src/ms_preprocessing/utils/: __init__.py  excel_formatting_writer.py  file_handler.py  input_reader.py  intermediate_store.py  output_writer.py  parquet_cache_store.py  parquet_compat.py  perf.py  results.py  validators.py
src/ms_preprocessing/workflow/: __init__.py  combined_tsv_service.py  export_service.py  input_loader.py  parameter_resolver.py  pipeline_session.py  workflow_runner.py
tests/: __init__.py  conftest.py  test_adapter_data_organizer.py  test_adapter_duplicate_remover.py  test_adapter_feature_filter.py  test_adapter_istd_marker.py  test_adapter_runtime_contracts.py  test_bootstrap_paths.py  test_cli_parquet_chain.py  test_combined_tsv_service.py  test_data_organizer.py  test_data_organizer_widget.py  test_duplicate_remover.py  test_duplicate_remover_widget.py  test_export_dnp_bridge.py  test_feature_filter.py  test_feature_filter_presets.py  test_feature_filter_widget.py  test_final_export_cache_policy.py  test_final_export_handoff.py  test_golden_pipeline_contract.py  test_gui_async_task_runner.py  test_gui_event_handlers.py  test_gui_main_window_sidebar_labels.py  test_gui_pipeline_controller.py  test_gui_pipeline_session.py  test_gui_session_summary.py  test_gui_step_summary.py  test_gui_styles.py  test_gui_validation.py  test_gui_workflow_labels.py  test_integration_parquet_pipeline.py  test_intermediate_store_bridge.py  test_istd_marker.py  test_istd_marker_widget.py  test_ms_core_api_contract.py  test_parameter_resolver.py  test_parquet_compat.py  test_perf_guardrails.py  test_pipeline_baseline_contract.py  (+15 more)
tests/adapters/: test_adapter_data_organizer.py  test_adapter_feature_filter.py  test_adapter_istd_marker.py  test_adapter_runtime_contracts.py  test_cross_project_adapter_contracts.py
tests/core/: test_cross_project_adapter_contracts.py  test_data_organizer.py  test_duplicate_remover.py  test_feature_filter.py  test_istd_marker.py
(+10 files in other folders)
