[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-preprocessing-toolkit"
version = "1.2.1"
description = "Mass Spectrometry Data Preprocessing Toolkit - An integrated GUI tool for MS data preprocessing workflow"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "bosschen0429", email = "j25057175@gmail.com"}
]
maintainers = [
    {name = "Chao-hu Lab", email = "j25057175@gmail.com"}
]
keywords = ["mass spectrometry", "preprocessing", "metabolomics", "data processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pyarrow>=14.0.0",
    "psutil>=5.9.0",
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "python-docx>=0.8.11",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ms-preprocessing = "ms_preprocessing.main:main"

[project.gui-scripts]
ms-preprocessing-gui = "ms_preprocessing.main:main"

[project.urls]
Homepage = "https://github.com/Chao-hu-Lab/ms-preprocessing-toolkit"
Documentation = "https://github.com/Chao-hu-Lab/ms-preprocessing-toolkit#readme"
Repository = "https://github.com/Chao-hu-Lab/ms-preprocessing-toolkit"
Issues = "https://github.com/Chao-hu-Lab/ms-preprocessing-toolkit/issues"
Releases = "https://github.com/Chao-hu-Lab/ms-preprocessing-toolkit/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ms_preprocessing = ["resources/builtin_profiles/*.yml"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"ms_core" = {msg = "Import ms_core only through adapters, not directly in GUI or config layers."}

[tool.ruff.lint.per-file-ignores]
# adapters/ 是唯一允許直接 import ms_core 的地方
"src/ms_preprocessing/adapters/**/*.py" = ["TID251"]
# benchmark scripts 是 local analysis harness，允許直接驗證 ms_core 行為
"scripts/benchmark_*.py" = ["TID251"]
# subset/full comparison script 是 local validation harness，允許直接驗證 ms_core 行為
"scripts/compare_subset_vs_full.py" = ["TID251"]
# benchmark script 需要在開發環境先補 repo-local src path 再匯入 toolkit config
"scripts/benchmark_pipeline_io.py" = ["E402"]
# package bootstrap 需要先調整 ms-core path 再匯出 adapter API
"src/ms_preprocessing/__init__.py" = ["E402"]
# tests 允許直接 import ms_core（core unit tests 需要）
"tests/**/*.py" = ["TID251"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider --strict-markers"
norecursedirs = ["OUTPUT", ".git", ".pytest_cache", "__pycache__", ".tmp"]
tmp_path_retention_policy = "failed"
markers = [
    "smoke: fast entrypoint, import, packaging, or public API sanity checks",
    "adapter: toolkit adapter contract tests",
    "gui: GUI layer tests, including widgets, workflow labels, validation helpers, styles, session summaries, or event scheduling",
    "integration: multi-component workflow, file IO, export, or cache behavior",
    "perf: runtime or performance guardrails",
    "serial: tests that must not run concurrently because they touch global GUI state, shared temp roots, cleanup scripts, or process-wide state",
]
